--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -170,4 +170,23 @@
     <string name="skin6_info">ينشأ الورم الميلانيني - وهو أخطر أنواع سرطان الجلد - في الخلايا (الميلانينية) التي تنتج صبغة الميلانين التي تمنح جلدك لونه. قد يصيب الورم الميلانيني أيضًا عينيك، ونادرًا ما يصيب أعضاء من جسمك كالأنف أو الحلق من الداخل.  ولا يُعلم بشكل واضح السبب الدقيق لجميع الأورام الميلانينية، لكن التعرض للأشعة فوق البنفسجية (UV) المنبعثة من الشمس أو مصابيح وأسرّة التسمير يزيد من فرص إصابتك بورم ميلانيني. قد يساعدك الحد من التعرض للأشعة فوق البنفسجية في تقليل فرص الإصابة بورم ميلانيني.  تزيد احتمالية الإصابة بالورم الميلانيني لدى الأشخاص الذين تقل أعمارهم عن 40 عامًا، وخصوصًا النساء. يمكن أن تساعد مؤشرات خطر سرطان الجلد في ضمان اكتشاف التغيرات السرطانية وعلاجها قبل انتشار السرطان. فعلاج الورم الميلانيني بنجاح أمر ممكن إذا اكتُشف الورم مبكرًا.</string>
     <string name="skin7_info">الشامات هي نوع شائع من حالات نمو الجلد. غالبًا ما تظهر على هيئة بقع صغيرة ذات لون بني داكن وتنتج من مجموعات من الخلايا الصباغية. تظهر الشامات عامةً في أثناء مرحلة الطفولة والمراهقة. يمتلك معظم الأشخاص نحو 10 إلى 40 شامة، بعضها قد يتغير مظهرها أو تختفي بمرور الوقت.  تُعد معظم الشامات غير ضارة. نادرًا ما تصبح سرطانية. تعتبر مراقبة الشامات وغيرها من البقع المصطبغة خطوة مهمة في الكشف عن سرطان الجلد، وخاصةً الورم الميلاني الخبيث.  الاسم الطبي للشامات هو الوحمة.</string>
     <string name="delete_account">"حذف الحساب "</string>
+    <string name="eyes_info1">"عادة ما ينتج جحوظ العين أو العينين عن مشاكل الغدة الدرقية ، مثل مرض جريفز أو فرط نشاط الغدة الدرقية. تشمل الأعراض إحساسًا شجاعًا مع حركة العين وتورم الجفن واحمرارها وجفاف العين أو تهيجها أو دماعها. تشمل العلاجات أدوية أمراض الغدة الدرقية والدموع الاصطناعية والكورتيكوستيرويدات والأدوية المثبطة للمناعة وربما الجراحة. "</string>
+    <string name="you_are_infected_with_bulging_eyes">"أنت مصاب بجحوظ العيون "</string>
+    <string name="your_eyes_are_healthy">"عيناك بصحة جيدة "</string>
+    <string name="i_m_sorry_nyour_eyes_aren_t_healthy">أنا آسف عيناك ليستا بصحة جيدة</string>
+    <string name="bulging_eyes">"جحوظ العيون "</string>
+    <string name="glaucoma">الزرق</string>
+    <string name="uveitis">"التهاب القزحية "</string>
+    <string name="crossed_eyes">حول العينين</string>
+    <string name="cataract">"إعتمام عدسة العين "</string>
+    <string name="eyes_diseases">امراض العيون</string>
+    <string name="you_can_upload_a_picture_of_your_eyes_and_we_will_n_tell_you_if_you_suffer_from_one_of_these_diseases">"يمكنك تحميل صورة لعينيك وسنخبرك إذا كنت تعاني من أحد هذه الأمراض "</string>
+    <string name="eyes_info2">"الحول (تقاطع العينين) هو حالة يتم فيها قلب إحدى العينين في اتجاه مختلف عن العين الأخرى. قد يشمل العلاج ارتداء النظارات أو الترقيع أو تمارين العين أو الأدوية أو الجراحة. "</string>
+    <string name="eyes_info3">"إعتام عدسة العين هو غشاوة عدسة العين ، والتي عادة ما تكون صافية. تتطور معظم حالات إعتام عدسة العين ببطء بمرور الوقت ، مما يؤدي إلى ظهور أعراض مثل الرؤية الضبابية. يمكن إزالة إعتام عدسة العين جراحيًا من خلال إجراء للمرضى الخارجيين يعيد الرؤية لدى الجميع تقريبًا. "</string>
+    <string name="eyes_info4">"يصاب الأشخاص المصابون بالتهاب القزحية بعيون حمراء ومنتفخة وملتهبة. لديهم أيضا آلام في العين. تزيد بعض الحالات من خطر الإصابة بالتهاب القزحية ، ولكن غالبًا ما يحدث المرض دون سبب معروف. يمكن للعلاجات استعادة الرؤية المفقودة ومنع المزيد من فقدان البصر. يمكن أن تعود أنواع معينة من التهاب القزحية بعد العلاج. يمكن أن يؤدي التهاب القزحية غير المعالج إلى العمى. "</string>
+    <string name="eyes_info5">يعاني الأشخاص المصابون بالزرق من تلف العصب البصري نتيجة تراكم السوائل في العين. إذا تُرك ضغط العين دون علاج ، فيمكن أن يؤثر بشكل دائم على الرؤية. الزرق هو السبب الرئيسي الثاني للعمى في العالم. العلاجات - بما في ذلك قطرات العين والعلاج بالليزر والعمليات الجراحية - يمكن أن تبطئ من فقدان البصر وتنقذ بصرك.</string>
+    <string name="you_have_glaucoma">انت مصاب بالزرق</string>
+    <string name="you_have_crossed_eyes">انت مصاب بحول العيون</string>
+    <string name="you_have_uveitis">انت مصاب بالتهاب القزحية</string>
+    <string name="you_have_cataracts">انت مصاب بإعتام عدسة العين</string>
 </resources>
