--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,5 +367,6 @@
     <string name="you_have_crossed_eyes">You have crossed eyes</string>
     <string name="you_have_uveitis">You have uveitis</string>
     <string name="you_have_cataracts">You have cataracts</string>
+    <string name="your_eyes_is_health">your eyes is health</string>
 
 </resources>
