--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -73,18 +73,19 @@
     <string name="english">الانجليزية</string>
     <string name="arabic">العربية</string>
     <string name="skin1_info">التقران السفعي عبارة عن رقعة خشنة متقشرة من الجلد تتكون من التعرض لأشعة الشمس لعدة سنوات. غالبًا ما يظهر على الوجه أو الشفتين أو الأذنين أو الساعدين أو فروة الرأس أو الرقبة أو مؤخرة اليدين.  يُعرف أيضًا باسم التقرن الشمسي ، وينمو ببطء وعادة ما يظهر لأول مرة بعد أن يزيد عمر الشخص عن 40 عامًا. يمكنك تقليل مخاطر هذه الحالة الجلدية عن طريق الحد من التعرض لأشعة الشمس وحماية الجلد من الأشعة فوق البنفسجية.  إذا تُرك التقران السفعي دون علاج ، فقد يتحول إلى نوع من سرطان الجلد يسمى سرطان الخلايا الحرشفية ، مع احتمال 5٪ إلى 10٪.</string>
-    <string name="age">العمر</string>
-    <string name="Successful_rays">"الاشعة سلمية ! "</string>
+    <string name="Successful_rays">"الاشعة سليمة ! "</string>
+    <string name="Successful_photos">"الصور سليمة ! "</string>
+
     <string name="chat">محادثة</string>
     <string name="select_doctor">اختـار دكتور</string>
     <string name="type_a_message">"اكتب رسالتك .... "</string>
     <string name="Continue">استمر</string>
-    <string name="doctor_name">"اسم الدكتور : "</string>
-    <string name="medical_specialty">"المجال الطبي : "</string>
-    <string name="clinic_address">"عنوان العيادة : "</string>
-    <string name="phone2">"رقم التليفون : "</string>
-    <string name="available_time">"الوقت المتاح : "</string>
-    <string name="other_inf">"معلومات اخري : "</string>
+    <string name="doctor_name">" :اسم الدكتور  "</string>
+    <string name="medical_specialty">": المجال الطبي  "</string>
+    <string name="clinic_address">" : عنوان العيادة  "</string>
+    <string name="phone2">": رقم التليفون  "</string>
+    <string name="available_time">": الوقت المتاح  "</string>
+    <string name="other_inf">": معلومات اخري  "</string>
     <string name="your_lung_is_healthy">"رئتـك سليمة "</string>
     <string name="please_upload_a_picture_of_the_skin">"من فضلك قم برفع صورة لجلدك "</string>
     <string name="upload_now">"ارفع الان "</string>
@@ -109,7 +110,9 @@
     <string name="_160_egp">160 جنيه</string>
     <string name="dr_mohamed_deif">دكتور : محمد ضيـف</string>
     <string name="_200_egp">200 جنيه</string>
-    <string name="i_m_sorry_nyour_rays_aren_t_healthy">"نعتذر .. اشعتك ليست سليمة .. "</string>
+    <string name="i_m_sorry_nyour_rays_aren_t_healthy">"نعتذر .. الأشعة الخاصة بك ليست سليمة .. "</string>
+    <string name="i_m_sorry_nyour_photos_aren_t_healthy">"نعتذر .. الصور الخاصة بك ليست سليمة .. "</string>
+
     <string name="please_upload_a_picture_of_the_eye">"من فضلك قم برفع صورة للعين "</string>
     <string name="you_are_infected_with_covid_19">"انت مصاب ب كوفيد - 19 "</string>
     <string name="we_have_more_than_field">"لدينا أكثر من مجال .. "</string>
@@ -125,7 +128,7 @@
     <string name="dr_amani_khalil">دكتور : أماني خليل</string>
     <string name="_140_egp">140 جنيه</string>
     <string name="_250_egp">250 جنيه</string>
-    <string name="your_skin_is_healthy">"جلدك صحي .. "</string>
+    <string name="your_skin_is_healthy">"بشرتك سليمة .. "</string>
     <string name="dr_amr_said">"دكتور : عمرو سعيد "</string>
     <string name="dr_rasha_moussa">دكتور : رشـا موسى</string>
     <string name="dr_amr_hussein">دكتور : عمرو حسـن</string>
@@ -145,15 +148,7 @@
     <string name="text2_feedback">"نحن نعمل بجد لخدمتك بشكل أفضل و "</string>
     <string name="text3_feedback">"نحب أن نعرف ملاحظاتك "</string>
     <string name="text4_feedback">"علي تطبيقنا ؟ "</string>
-    <string name="blood_urea">"اليوريا في الدم "</string>
-    <string name="sugar">"السكر "</string>
-    <string name="blood_pressure">"ضغط الدم "</string>
-    <string name="white_blood_cell_count">عدد خلايا الدم البيضاء</string>
-    <string name="serum_creatinine">"الكرياتينين في الدم "</string>
-    <string name="blood_glucose_rendom">الجلوكوز في الدم</string>
-    <string name="albumin">الزلال</string>
-    <string name="potassium">البوتاسيوم</string>
-    <string name="dr_mohamed_el_samlawy">دكتور : محمد السملاوي</string>
+\    <string name="dr_mohamed_el_samlawy">دكتور : محمد السملاوي</string>
     <string name="actinic_keratosis">التقران السفعي</string>
     <string name="intraepithelial_carcinoma">السرطان داخل الظهارة</string>
     <string name="basal_cell_carcinoma">سرطان الخلايا القاعدية</string>
@@ -189,4 +184,79 @@
     <string name="you_have_crossed_eyes">انت مصاب بحول العيون</string>
     <string name="you_have_uveitis">انت مصاب بالتهاب القزحية</string>
     <string name="you_have_cataracts">انت مصاب بإعتام عدسة العين</string>
+    <string name="your_kidney_isn_t_healthy">كليتك ليست سليمة</string>
+    <string name="your_eyes_is_health">عيناك سليمة</string>
+    <string name="al_ahram_gardens_184_army_road_zone_a_hadayek_al_ahram_fourth_gate_next_to_el_far_pharmacy">"حدائق الاهرام 184 طريق الجيش - منطقة أ حدائق الاهرام البوابة الرابعة - بجوار صيدلية الفار "</string>
+    <string name="ophthalmologist_specialized_in_adult_eyes_retinal_and_vitreous_surgery_pediatric_ophthalmology_and_lasik_vision_correction_and_cataract">"دكتور عيون متخصص في عيون بالغين ، جراحة شبكية وجسم زجاجي ، عيون اطفال وليزك وتصحيح الابصار والمياة البيضاء "</string>
+    <string name="ophthalmologist_specialized_in_adult_eyes_retinal_and_vitreous_surgery_pediatric">"دكتور عيون متخصص في عيون بالغين ، جراحة شبكية وجسم زجاجي ، اطفال ... "</string>
+    <string name="cairo_el_shorouk_city_city_center_1_el_atebaa_tower">"القاهره: مدينه الشروق - سيتي سنتر ١ - برج الاطباء "</string>
+    <string name="you_have_pneumonia">"لديك التهاب رئوي "</string>
+    <string name="dermatology_clinic_in_bakus">"عيادة الجلدية في باكوس "</string>
+    <string name="el_raml_alexandria_governorate">"الرمل ، محافظة الإسكندرية "</string>
+    <string name="vascuderm_clinic">عيادة فاسكوديرم</string>
+    <string name="ezbet_saad_sidi_gaber_alexandria">"عزبة سعد ، سيدى جابر ، الإسكندرية "</string>
+    <string name="dalia_derma_clinic">"عيادة داليا ديرما "</string>
+    <string name="abou_quer_sidi_gabir_sidi_gaber_alexandria">"ابو قير، سيدى جابر، الاسكندرية "</string>
+    <string name="abbasia_clinic">"عيادة العباسية "</string>
+    <string name="fakhry_abd_el_nour_al_abbaseyah_al_qebleyah_el_weili_cairo">"فخري عبد النور ، العباسية القبليّة ، الويلي ، القاهرة "</string>
+    <string name="you_are_infected_with_actinic_keratosis">"أنت مصاب بالتقران السفعي "</string>
+    <string name="you_are_infected_with_nintraepithelial_carcinoma">"أنت مصاب بسرطان الظهارة "</string>
+    <string name="you_are_infected_with_nbasal_cell_carcinoma">"أنت مصاب بسرطان الخلايا القاعدية "</string>
+    <string name="you_are_infected_with_seborrheic_keratosis">"أنت مصاب بالتقران الدهني "</string>
+    <string name="you_are_infected_with_dermatofibroma">"أنت مصاب بورم ليفي جلدي "</string>
+    <string name="you_are_infected_with_melanoma">"أنت مصاب بسرطان الجلد "</string>
+    <string name="you_are_infected_with_melanocytic_nevi">"أنت مصاب بالوحمات الصباغية "</string>
+    <string name="lecturer_of_ophthalmology_and_surgery_faculty_of_medicine_alexandria_university_consultant_of_cataract_corneal_lasik_and_lens_implant_surgeries_member_of_the_european_society_for_vision_correction_and_cataracts">"مدرس طب وجراحة العيون بكلية الطب جامعة الاسكندرية ..... استشارى جراحات المياه البيضاء والقرنية والليزك وزراعة العدسات…. عضو الجمعية الأوروبية لتصحيح الإبصار وإعتام عدسة العين "</string>
+    <string name="_5th_sayed_fahmy_street_above_baraka_bank_smouha">"الخامس شارع سيد فهمى فوق بنك البركة سموحة "</string>
+    <string name="lecturer_of_ophthalmology_and_surgery_faculty_of_medicine_alexandria">"مدرس طب وجراحة العيون بكلية الطب الاسكندرية ... "</string>
+    <string name="consultant_cataract_surgeon_md_ophthalmology_fellow_of_the_royal">استشاري جراحة  دكتوراه طب وجراحة العيون. زميل رويال ...</string>
+    <string name="consultant_cataract_surgeon_md_ophthalmology_fellow_of_the_royal_college_of_surgeons_of_glasgow_harvard_teaching_training_fellowship">استشاري جراحة  دكتوراه طب وجراحة العيون. زميل الكلية الملكية للجراحين بجلاسكو. زمالة تدريب التدريس بجامعة هارفارد.</string>
+    <string name="_25_mohy_el_din_abou_el_ezz_street_first_floor_cairo">"25 شارع محيى الدين ابو العز - الدور الاول - القاهرة "</string>
+    <string name="consultant_of_ophthalmology_and_lasik_at_the_international_medical_centerdoctor_of_ophthalmology">"استشارى طب وجراحة العيون والليزك بالمركز الطبى الدولى دكتور طب وجراحة العيون ... "</string>
+    <string name="consultant_of_ophthalmology_and_lasik_at_the_international_medical_centerdoctor_of_ophthalmology_specialized_in_lasik_vision_correction_and_cataracts_adult_ophthalmology_and_pediatric_ophthalmology">"استشارى طب وجراحة العيون والليزك بالمركز الطبى الدولى دكتور طب وجراحة العيون متخصص الليزك وتصحيح الابصار والمياه البيضاء وطب عيون الكبار وطب عيون الاطفال. "</string>
+    <string name="_139_el_tahrir_ad_doqi_a_dokki_giza_governorate">"139 التحرير ، الدقي أ ، الدقي ، محافظة الجيزة "</string>
+    <string name="md_ophthalmology_consultant_of_plastic_surgery_of_the_eyelids">"دكتوراه طب وجراحة العيون - استشاري جراحة تجميل الجفون ... "</string>
+    <string name="md_ophthalmology_consultant_of_plastic_surgery_of_the_eyelids_tear_ducts_and_eye_orbits">"دكتوراه طب وجراحة العيون - استشاري جراحة تجميل الجفون والقنوات الدمعية ومدارات العين "</string>
+    <string name="al_haram_eye_center_al_ahram_street_in_front_of_the_european_hotel_al_haram">"مركز الهرم للعيون. شارع الاهرام امام فندق الاوروبي الهرم "</string>
+    <string name="instructor_of_ophthalmology_and_laser_ophthalmologist_specialized_in_lasik">"مدرس طب وجراحة العيون والليزر طبيب عيون متخصص بالليزك ... "</string>
+    <string name="instructor_of_ophthalmology_and_laser_ophthalmologist_specialized_in_lasik_vision_correction_cataracts_pediatric_ophthalmology_retinal_and_vitreous_surgery">"مدرس طب وجراحة العيون والليزر وطبيب عيون متخصص في الليزك وتصحيح الابصار والمياه البيضاء وطب عيون الاطفال وجراحة الشبكية والجسم الزجاجي. "</string>
+    <string name="nasr_city_abbas_el_akkad_street">"مدينة نصر: شارع عباس العقاد "</string>
+    <string name="consultant_of_internal_chest_diseases_and_allergies_ain_shams_university_chest_and_respiratory_doctor_specialized_in_respiratory_allergy_pediatric_chest_and_respiratory_adult_chest_and_respiratory_and_general_internal_medicine">"استشارى امراض الباطنه الصدريه والحساسيه - جامعه عين شمس. دكتور صدر وجهاز تنفسي متخصص في حساسية الجهاز التنفسي ، صدر وجهاز تنفسي اطفال ، صدر وجهاز تنفسي بالغين وطب باطني عام "</string>
+    <string name="dar_al_fouad_hospital_nasr_city">"مستشفى دار الفؤاد (مدينة نصر) "</string>
+    <string name="lecturer_and_consultant_of_chest_respiratory_and_allergy_diseasesdoctor_of_chest_and_respiratory_diseases_specialized_in_autoimmune_diseases_adult_allergy_and_immunology">"مدرس واستشاري امراض الصدر والجهاز التنفسي والحساسية - دكتور امراض الصدر والجهاز التنفسي متخصص في امراض المناعة الذاتية وحساسية الكبار والمناعة. "</string>
+    <string name="_8_college_of_medicine_street_doctors_tower_raml_station_raml_station_alexandria">"8 شارع كلية الطب - برج الأطباء - محطة الرمل - الإسكندرية "</string>
+    <string name="professor_of_pulmonary_medicine_and_allergy_faculty_of_medicine_alexandria_university_consultant_bronchoscopy_and_thoracic_intensive_care">"استاذ امراض الرئة والحساسية بكلية الطب جامعة الاسكندرية استشاري مناظير القصبات والعناية المركزة الصدرية. "</string>
+    <string name="nasr_city_the_ground_floor_of_building_20_tayaran_street_near_rabaa_mosque">"مدينة نصر الدور الأرضي عمارة 20 شارع الطيران (بالقرب من مسجد رابعة) "</string>
+    <string name="consultant_of_pediatric_chest_and_respiratory_diseases_faculty_member_faculty_of_medicine_ain_shams_university_and_ph_d_in_pediatrics_and_neonatology">"استشارى امراض الصدر و الجهاز التنفسى عضو هيئة تدريس بكلية الطب جامعة عين شمس و دكتوراه. في طب الأطفال وحديثي الولادة "</string>
+    <string name="_8_el_fardous_buildings_taqa_street_behind_al_ahly_club_nasr_city_39_cleopatra_street_salah_el_din_square_heliopolis_cairo_nasr_city">"8 عمارات الفردوس - شارع طاقة - خلف النادي الاهلي - مدينة نصر / 39 شارع كليوباترا - ميدان صلاح الدين - مصر الجديدة - القاهرة، مدينة نصر "</string>
+    <string name="chest_diseases_consultant_chest_and_respiratory_doctor_specialized_in_adult_chest_and_respiratory">"استشاري امراض الصدر. دكتور صدر وجهاز تنفسي متخصص في صدر وجهاز تنفسي بالغين. "</string>
+    <string name="master_of_chest_diseases_and_allergy_ain_shams_university_chest_and_allergy_specialist">"ماجستير امراض الصدر والحساسية (جامعه عين شمس) اخصائي صدر وحساسية "</string>
+    <string name="salahuddin_dermatology_hospital">"مستشفى صلاح الدين للجلدية "</string>
+    <string name="_4_kayetbai_street_almazah_heliopolis_cairo">"4 شارع كايتباي، الماظة، مصر الجديدة، القاهرة "</string>
+    <string name="dermatology_hospital">"مستشفى الجلدية "</string>
+    <string name="qism_damietta_damietta_desert_damietta">"قسم دمياط، صحراء دمياط، دمياط "</string>
+    <string name="phd_and_consultant_of_dermatology_dermatology_and_laser_therapy">"دكتوراة و استشارى الامراض الجلدية و الجلدية و العلاج بالليزر ... "</string>
+    <string name="consultant_of_dermatology_and_cosmetology_and_consultant_of_genitourinary_diseases">"استشاري الامراض الجلديه و التجميل و استشاري امراض المسالك البوليه ... "</string>
+    <string name="dermatology_cosmetology_and_laser_specialist_kasr_al_ainy_cairo_university">"اخصائي الامراض الجلديه والتجميل والليزر القصر العيني - جامعه القاهره ... "</string>
+    <string name="dermatologist_specialized_in_plastic_surgery_burns_plastic_surgery_and_laser_venereal_diseases">"دكتور جلدية متخصص في جراحة التجميل والحروق وجراحة التجميل والليزر والأمراض التناسلية ... "</string>
+    <string name="consultant_dermatologist_cosmetic_and_laser_at_cairo_university_a_dermatologist">"استشارى الامراض الجلدية والتجميل والليزر بجامعة القاهرة. طبيب جلدية ... "</string>
+    <string name="dermatologist_specialized_in_adult_dermatology_cosmetic_and_laser_genital_diseases">"دكتور جلدية متخصص في جلدية بالغين ، تجميل وليزر ، امراض تناسلية ... "</string>
+    <string name="dermatologist_specialized_in_adult_dermatology_cosmetic_and_laser_genital_diseases_andrology_pediatric_dermatology_eye_plastic_surgery_and_facial_plastic_surgery">"دكتور جلدية متخصص في جلدية بالغين ، تجميل وليزر ، امراض تناسلية ، امراض ذكورة ، جلدية اطفال ، جراحة تجميل العيون و جراحة تجميل الوجه "</string>
+    <string name="_370_faisal_main_street_tamimi_station_in_front_of_twinki_second_floor_faisal">"٣٧٠ شارع فيصل العام محطة التميمي أمام توينكي الدور الثاني فيصل "</string>
+    <string name="consultant_dermatologist_cosmetic_and_laser_at_cairo_university_a_dermatologist_specialized_in_adult_dermatology_plastic_surgery_and_laser_and_pediatric_dermatology">"استشارى الامراض الجلدية والتجميل والليزر بجامعة القاهرة. دكتور جلدية متخصص في جلدية بالغين و جراحة تجميل وليزر و جلدية اطفال. "</string>
+    <string name="naqraha_damanhour_el_beheira">"نقرة ، دمنهور ، البحيرة "</string>
+    <string name="dermatologist_specialized_in_plastic_surgery_burns_plastic_surgery_and_laser_venereal_diseases_dermatology_plastic_surgery_plastic_surgery_dermatology_pediatric_dermatology">"دكتور جلدية متخصص في الجراحة التجميلية ، الحروق ، الجراحة التجميلية والليزر ، الأمراض التناسلية ، الجلدية ، الجراحة التجميلية ، الجراحة التجميلية ، جلدية ، جلدية أطفال "</string>
+    <string name="el_khalifa_el_maamoun_mansheya_el_bakry_heliopolis_cairo">"الخليفة المأمون ، منشية البكرى ، مصر الجديدة ، القاهرة "</string>
+    <string name="dermatology_cosmetology_and_laser_specialist_kasr_al_ainy_cairo_university_dermatologist_specialized_in_plastic_surgery_and_laser">"اخصائي الامراض الجلديه والتجميل والليزر القصر العيني - جامعه القاهره. دكتور جلدية متخصص في الجراحة التجميلية والليزر. "</string>
+    <string name="misr_scope_center_dokki_107_liberation_street">"مركز مصر سكوب (الدقي) 107 شارع التحرير "</string>
+    <string name="consultant_of_dermatology_and_cosmetology_and_consultant_of_genitourinary_diseases_and_andrology_and_infertility_consultant_of_plastic_surgery_and_laser_therapy">"استشارى الجلدية و التجميل و استشارى امراض المسالك البوليه و التناسلية و العقم استشارى الجراحة التجميلية و العلاج بالليزر "</string>
+    <string name="fifth_settlement_north_ninety_street_behind_the_air_hospital_clinic_14_cmc_cairo">"التجمع الخامس - شمال شارع التسعين - خلف المستشفى الجوى - عيادة 14 - CMC القاهرة "</string>
+    <string name="phd_and_consultant_of_dermatology_dermatology_and_laser_therapy_at_benha_university_and_children_s_specialized_hospital">"دكتوراه واستشاري الأمراض الجلدية و الجلدية و العلاج بالليزر بجامعة بنها و مستشفى الأطفال التخصصي. "</string>
+    <string name="_4_farid_nada_street_in_front_of_the_emergency_banha">"4 شارع فريد ندى - امام الطوارئ - بنها "</string>
+    <string name="no">لا</string>
+    <string name="un_normal">غير طبيعي</string>
+    <string name="normal">طبيعي</string>
+    <string name="present">يوجد</string>
+    <string name="not_present">لا يوجد</string>
+    <string name="yes">نعم</string>
 </resources>
