--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,19 +87,19 @@
     <string name="about4">Or talk to a doctor and benefit from his advice</string>
     <string name="about5">We wish you better days</string>
     <string name="Successful_rays">Successful rays !</string>
+    <string name="Successful_photos">Successful photos !</string>
+
     <string name="english">English</string>
     <string name="arabic">Arabic</string>
 
     <string name="Eye_city">Eye city</string>
-    <string name="age">Age </string>
-    <string name="albumin">Albumin </string>
-    <string name="blood_glucose_rendom">blood glucose rendom</string>
-    <string name="serum_creatinine">Serum Creatinine</string>
-    <string name="white_blood_cell_count">White blood cell count</string>
-    <string name="blood_pressure">blood pressure</string>
-    <string name="sugar">Sugar</string>
-    <string name="blood_urea">blood urea</string>
-    <string name="potassium">Potassium</string>
+    <string name="albumin" translatable="false">Albumin </string>
+    <string name="blood_glucose_random" translatable="false">blood glucose random</string>
+    <string name="serum_creatinine" translatable="false">Serum Creatinine</string>
+    <string name="white_blood_cell_count" translatable="false">White blood cell count</string>
+    <string name="blood_pressure" translatable="false">blood pressure</string>
+    <string name="blood_urea" translatable="false">blood urea</string>
+    <string name="potassium" translatable="false">Potassium</string>
     <string name="dr_mohamed_el_samlawy">Dr.Mohamed ElSamlawy</string>
     <string name="select_doctor">Select Doctor</string>
     <string name="chat">Chat</string>
@@ -130,7 +130,7 @@
     <string name="ezbet_saad_sidi_gaber_alexandria">Ezbet Saad, Sidi Gaber, Alexandria</string>
     <string name="_4_3" translatable="false">4.3</string>
     <string name="dalia_derma_clinic">Dalia Derma Clinic</string>
-    <string name="abou_quer_sidi_gabir_sidi_gaber_alexandria">Abou Quer, Sidi Gabir, Sidi Gaber, Alexandria</string>
+    <string name="abou_quer_sidi_gabir_sidi_gaber_alexandria">Abou Quer, Sidi Gabir,  Alexandria</string>
     <string name="_3_7" translatable="false">3.7</string>
     <string name="abbasia_clinic">Abbasia Clinic</string>
     <string name="fakhry_abd_el_nour_al_abbaseyah_al_qebleyah_el_weili_cairo">Fakhry Abd El-Nour, Al Abbaseyah Al Qebleyah, El Weili, Cairo</string>
@@ -227,6 +227,8 @@
     <string name="al_ibrahimeya_al_walideyah_al_westaneyah_asyut_2_assiut">Al Ibrahimeya, Al Walideyah Al Westaneyah, Asyut 2, Assiut</string>
     <string name="please_upload_your_report">Please Upload Your report</string>
     <string name="i_m_sorry_nyour_rays_aren_t_healthy">I\'m sorry\nYour rays aren\'t healthy</string>
+    <string name="i_m_sorry_nyour_photos_aren_t_healthy">I\'m sorry\nYour photos aren\'t healthy</string>
+
     <string name="you_have_pneumonia">You have Pneumonia</string>
     <string name="we_wish_you_good_health">We wish you good health</string>
     <string name="please_upload_a_picture_of_the_eye">Please upload a picture of the eye</string>
@@ -292,7 +294,7 @@
 
     <string name="professor_of_pulmonary_medicine_and_allergy_faculty_of_medicine_alexandria_university_consultant_bronchoscopy_and_thoracic_intensive_care">Professor of Pulmonary Medicine and Allergy, Faculty of Medicine, Alexandria University Consultant bronchoscopy and thoracic intensive care.</string>
     <string name="_4855593" translatable="false">4855593</string>
-    <string name="_8_college_of_medicine_street_doctors_tower_raml_station_raml_station_alexandria">8 College of Medicine Street, Doctors Tower, Raml Station Raml Station - Alexandria</string>
+    <string name="_8_college_of_medicine_street_doctors_tower_raml_station_raml_station_alexandria">8 College of Medicine Street, Doctors Tower, Raml Station - Alexandria</string>
     <string name="_250_egp">250 EGP</string>
     <string name="lecturer_and_consultant_of_chest_respiratory_and_allergy_diseasesdoctor_of_chest_and_respiratory_diseases_specialized_in_autoimmune_diseases_adult_allergy_and_immunology">Lecturer and Consultant of Chest, Respiratory and Allergy DiseasesDoctor of Chest and Respiratory Diseases Specialized in Autoimmune Diseases, Adult Allergy and Immunology.</string>
     <string name="_01002222545" translatable="false">01002222545</string>
@@ -368,5 +370,23 @@
     <string name="you_have_uveitis">You have uveitis</string>
     <string name="you_have_cataracts">You have cataracts</string>
     <string name="your_eyes_is_health">your eyes is health</string>
+    <string name="your_kidney_isn_t_healthy">your kidney isn\'t healthy</string>
+    <string name="specific_gravity" translatable="false">Specific Gravity</string>
+    <string name="puscell" translatable="false">PusCell</string>
+    <string name="sodium" translatable="false">Sodium</string>
+    <string name="normal">Normal</string>
+    <string name="un_normal">Un Normal</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="puscell_climps" translatable="false">PusCell Climps</string>
+    <string name="hypertension" translatable="false">Hypertension</string>
+    <string name="diabete" translatable="false">Diabete</string>
+    <string name="peda_edema" translatable="false">Peda edema</string>
+    <string name="anemia" translatable="false">Anemia</string>
+    <string name="haemoglobin" translatable="false">Haemoglobin</string>
+    <string name="packetcellvolum" translatable="false">PacketCellVolum</string>
+    <string name="red_bloodcell_count" translatable="false">Red bloodcell count</string>
+    <string name="present">Present</string>
+    <string name="not_present">Not present</string>
 
 </resources>
