--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -259,4 +259,64 @@
     <string name="present">يوجد</string>
     <string name="not_present">لا يوجد</string>
     <string name="yes">نعم</string>
+    <string name="kidney_and_diabetes_consultant_nephrologist_specialized_in_adult">"استشاري كلى و سكر استشاري كلى متخصص في كبار ... "</string>
+    <string name="kidney_and_diabetes_consultant_nephrologist_specialized_in_adult_diabetes_adult_endocrinology_and_adult_nephrology">"استشاري كلى و سكر و كلى متخصص في سكر وغدد صماء بالغين و كلى كبار. "</string>
+    <string name="new_cairo_settlement_edrak_clinics_street_15_district_one_fifth_settlement_medical_park_1_in_front_of_the_courts_complex_next_to_7_stars_mall">"القاهرة الجديدة (التجمع) عيادات إدراك شارع 15 الحي الأول - التجمع الخامس ميديكال بارك 1 - أمام مجمع المحاكم - بجوار مول سفن ستارز "</string>
+    <string name="consultant_of_nephrology_diabetes_internal_medicine_immunology_and_thyroid_diseases_nephrologist_specialized_in_adult_diabetes_and_endocrinology_general_internal_medicine_and_adult_nephrology">"استشاري امراض الكلى و السكر و الباطنة و المناعة و امراض الغدة الدرقية (اخصائي كلى متخصص في سكر و غدد صماء بالغين و باطنية عامة و كلى بالغين) "</string>
+    <string name="street_105_cairo_maadi">"شارع 105 ، القاهرة ، المعادي "</string>
+    <string name="consultant_of_nephrology_diabetes_internal_medicine_immunology">"استشاري امراض الكلى و السكر و الباطنة و المناعه ... "</string>
+    <string name="internist_specialized_in_adult_cardiology_pediatric_cardiology_adult_gastroenterology_and">"دكتور باطنة متخصص في قلب بالغين ، قلب اطفال ، جهاز هضمي وتنظير بالغين و .... "</string>
+    <string name="internist_specialized_in_adult_cardiology_pediatric_cardiology_adult_gastroenterology_and_endoscopy_adult_kidney_adult_liver_adult_diabetes_and_endocrinology_general_internal_medicine">"دكتور باطنية متخصص في قلب بالغين ، قلب اطفال ، جهاز هضمي وتنظير بالغين ، كلى بالغين ، كبد بالغين ، سكر وغدد صماء بالغين ، باطنة عامة "</string>
+    <string name="agami_alex_matrouh_road">"العجمي:  اسكندرية - طريق مطروح "</string>
+    <string name="kidney_disease_renal_insufficiency_nephrolithiasis_and_immunology_dialysis">"أمراض الكلى ، القصور الكلوي ، تحص الكلية والمناعة ، غسيل الكلى ... "</string>
+    <string name="kidney_disease_renal_insufficiency_nephrolithiasis_and_immunology_dialysis_internal_diseases_pressure_and_diabetes_plasmapheresis_sessions_for_immune_diseases">"أمراض الكلى ، القصور الكلوي ، تحص الكلية والمناعة ، غسيل الكلى ، الأمراض الباطنية ، الضغط والسكري ، جلسات فصل البلازما لأمراض المناعة. "</string>
+    <string name="tanta_al_bahar_street_university_bridge">"طنطا: شارع البحر (جسر الجامعة) "</string>
+    <string name="consultant_of_nephrology_and_kidney_transplantation_and_consultant">"استشاري امراض الكلى وزرع الكلى واستشاري ... "</string>
+    <string name="consultant_of_nephrology_and_kidney_transplantation_and_consultant_of_pediatric_nephrology_a_nephrologist_specialized_in_general_internal_medicine_adult_nephrology_and_pediatric_nephrology">"استشاري امراض الكلى وزرع الكلى واستشاري امراض كلى الاطفال واخصائي كلى متخصص باطنية عامة وكلى بالغين وكلى اطفال "</string>
+    <string name="mansoura_happy_land_square">"المنصورة: ميدان هابي لاند "</string>
+    <string name="consultant_of_nephrology_cardiology_and_internal_medicine">"استشاري امراض الكلى و القلب و الباطنة ... "</string>
+    <string name="consultant_of_nephrology_cardiology_and_internal_medicine_nephrologist_specialized_in_adult_diabetes_and_endocrinology_general_internal_medicine_adult_kidneys_and_adult_urology">"استشاري امراض الكلى و القلب و الباطنة. دكتور كلى متخصص في سكر وغدد صماء بالغين ، باطنة عامة ، كلى بالغين و مسالك بولية بالغين "</string>
+    <string name="raml_station_faculty_of_medicine">"محطة الرمل: كلية الطب "</string>
+    <string name="sadr_el_fayoum_hospital">"مستشفى صدر الفيوم "</string>
+    <string name="qesm_al_fayoum_faiyum_faiyum_governorate">"قسم الفيوم ، محافظة الفيوم "</string>
+    <string name="alexandria_chest_center">"مركز الاسكندرية للصدر "</string>
+    <string name="_712_el_horeya_rd_san_stefano_el_raml_1_alexandria">"712 طريق الحرية - سان استيفانو، الرمل 1، الاسكندرية "</string>
+    <string name="dar_al_fouad_hospital">"مستشفى دار الفؤاد "</string>
+    <string name="first_6th_of_october_giza_governorate">"السادس من اكتوبر محافظة الجيزة "</string>
+    <string name="abassya_chest_diseases_hospital">"مستشفى العباسية للامراض الصدرية "</string>
+    <string name="abbasseya_nasr_city_cairo_governorate">"عباسية ، مدينة نصر ، محافظة القاهرة "</string>
+    <string name="sadr_el_giza_hospital">"مستشفى صدر الجيزة "</string>
+    <string name="teraet_el_zomor_st_el_haram">"ش ترعة الزمر - الهرم "</string>
+    <string name="sadr_hospital_in_assiut">"مستشفى الصدر بأسيوط "</string>
+    <string name="al_ibrahimeya_al_walideyah_al_westaneyah_asyut_2_assiut">"الابراهيمية ، الوليدية الوسطى ، أسيوط 2 ، أسيوط "</string>
+    <string name="sheikh_zayed_specialized_hospital">"مستشفى الشيخ زايد التخصصى "</string>
+    <string name="central_axis_sheikh_zayed">"المحور المركزي الشيخ زايد "</string>
+    <string name="mansoura_university">"جامعة المنصورة "</string>
+    <string name="ghoneim_center_at_mansoura_university">"مركز غنيم بجامعة المنصورة "</string>
+    <string name="el_nasr_rd_al_abageyah_nasr_city_cairo_governorate">"طريق النصر ، الأباجية ، مدينة نصر ، محافظة القاهرة "</string>
+    <string name="arab_contractors_medical_centre">"المركز الطبى للمقاولون العرب "</string>
+    <string name="elite_medical_hospital">"مستشفى النخبة الطبى "</string>
+    <string name="sidi_beshr_bahri_montaza_2_alexandria_governorate">"سيدي بشر بحري المنتزه 2 محافظة الإسكندرية "</string>
+    <string name="as_salam_international_hospital_maadi_branch">"مستشفى السلام الدولى فرع المعادى "</string>
+    <string name="cairo_al_wosta_athar_an_nabi_old_cairo_cairo_governorate">"القاهرة - الوسطى ، آثار النبي ، القاهرة القديمة ، محافظة القاهرة "</string>
+    <string name="nile_hospital">"مستشفى النيل "</string>
+    <string name="el_nasr_hurghada_red_sea_governorate">"النصر ، الغردقة ، البحر الأحمر "</string>
+    <string name="consultant_of_internal_chest_diseases_and_allergies_ain_shams_university">"استشارى امراض الباطنه الصدريه والحساسيه - جامعه عين شمس ... "</string>
+    <string name="_42_abdel_salam_aref_street_fleming_saba_pasha_raml">"42 شارع عبد السلام عارف ، فلمينج ، سابا باشا ، الرمل. "</string>
+    <string name="cataract_hospital">"مستشفى الساد "</string>
+    <string name="el_quds_lane_qism_damanhour_el_beheira">"حارة القدس ، قسم دمنهور ، البحيرة "</string>
+    <string name="ophthalmology_hospital">"مستشفى طب وجراحة العيون "</string>
+    <string name="_25_ahmed_tayseer_al_golf_nasr_city_cairo">"25 احمد تيسير الجولف مدينة نصر القاهرة "</string>
+    <string name="i_vision_eye_hospital">"مستشفى اى فيجن للعيون "</string>
+    <string name="al_sayeda_nafisa_el_khalifa_cairo">"السيدة نفيسة ، الخليفة ، القاهرة "</string>
+    <string name="magrabi_eye_hospital">"مستشفى مغربي للعيون "</string>
+    <string name="el_mahalla_el_kubra_gharbia">"المحلة الكبرى، الغربية "</string>
+    <string name="el_rowad_hospital">"مستشفى الرواد "</string>
+    <string name="compound_behind_the_air_hospital_el_ayoun_city">"الكمبوند: خلف المستشفى الجوى - مدينة العيون "</string>
+    <string name="instructor_and_consultant_of_chest_respiratory_and_allergy_diseases">"مدرس واستشاري امراض الصدر والجهاز التنفسي والحساسية ... "</string>
+    <string name="professor_of_pulmonary_medicine_and_allergy_faculty_of_medicine_alexandria_university">"استاذ امراض الرئة والحساسية بكلية الطب جامعة الاسكندرية ... "</string>
+    <string name="consultant_of_pediatric_chest_and_respiratory_diseases_faculty_member_faculty_of">"استشاري امراض الصدر و الجهاز التنفسي عضو هيئة تدريس بكلية ... "</string>
+    <string name="chest_diseases_consultant_chest_and_respiratory">"استشاري امراض الصدر. الصدر والجهاز التنفسي ... "</string>
+    <string name="master_of_chest_diseases_and_allergy_ain_shams_university">"ماجستير امراض الصدر والحساسية (جامعه عين شمس) ... "</string>
+    <string name="_6056_al_miraj_city_zahraa_el_maadi_next_to_aba_el_dahab_ceramic_cairo_cairo_governorate_egypt_6056">"6056 مدينة المعراج - زهراء المعادي بجوار سيراميك أبا الدهب ، القاهرة ، محافظة القاهرة ، مصر 6056 "</string>
 </resources>
