--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -87,7 +87,7 @@
     <string name="other_inf">"معلومات اخري : "</string>
     <string name="your_lung_is_healthy">"رئتـك سليمة "</string>
     <string name="please_upload_a_picture_of_the_skin">"من فضلك قم برفع صورة لجلدك "</string>
-    <string name="upload_now">"ارفع الان "</string>
+    <string name="check_now">افحص الآن</string>
     <string name="dr_dalia_mohsen">"دكتور : داليا محسن "</string>
     <string name="dr_ghada_rabie">"دكتور : غادة ربيع "</string>
     <string name="dr_maher_mahmoud">دكتور : ماهـر محمود</string>
