--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,7 +122,7 @@
     <string name="other_inf">Other inf :</string>
     <string name="your_lung_is_healthy">Your lung is healthy</string>
     <string name="please_upload_a_picture_of_the_skin">Please upload a picture of the skin</string>
-    <string name="upload_now">Upload Now</string>
+    <string name="check_now">CHECK NOW</string>
     <string name="dermatology_clinic_in_bakus">Dermatology clinic in Bakus</string>
     <string name="el_raml_alexandria_governorate">El Raml , Alexandria Governorate</string>
     <string name="_4_7" translatable="false">4.7</string>
